[metadata]
name =  lbz
version = 0.0.0
aquthor = Ethan Djeric
author_email = ethan@ethandjeric.com 
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deafmute1/listenbrainz-disc 
project_urls =
    Bug Tracker = https://github.com/deafmute1/listenbrainz-disc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src 
packages = find:
python_requires = >=3.7 
install_requires = 
    discord.py 
    pylistenbrainz

[options.packages.find]
where = src 