[metadata]
name =  listenbrainz-disc
version = 0.0.1
author = Ethan Djeric
author_email = ethan@ethandjeric.com 
description = A discord bot to access your listenbrainz scrobbles.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deafmute1/listenbrainz-disc 
project_urls =
    Bug Tracker = https://github.com/deafmute1/listenbrainz-disc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src 
packages = find:
python_requires = >=3.7 
install_requires = 
    discord.py 
    pylistenbrainz@git+https://github.com/deafmute1/pylistenbrainz

[options.packages.find]
where = src 

[options.entry_points]
console_scripts = 
    lbz = lbzdisc:startBot